PC Torres Finalizado

--- a/src/app/components/registra-proveedor/registra-proveedor.component.html
+++ b/src/app/components/registra-proveedor/registra-proveedor.component.html
@@ -16,30 +16,30 @@
             
                 <div class="col-lg-5">
                     <label for="ruc">RUC</label>
-                    <input type="text" class="form-control" name="ruc" id="ruc" maxlength="8" [(ngModel)] = "proveedor.ruc"   />
+                    <input type="text" class="form-control" name="ruc" id="ruc" maxlength="11" [(ngModel)] = "proveedor.ruc"   />
                 </div>
          </div>
   
          <div class="col-lg-5">
             <label for="direccion">Direccion</label>
-            <input type="text" class="form-control" name="direccion" id="direccion" maxlength="8"  [(ngModel)] = "proveedor.direccion"   />  
+            <input type="text" class="form-control" name="direccion" id="direccion"   [(ngModel)] = "proveedor.direccion"   />  
         </div>
  </div>
 
  <div class="col-lg-5">
     <label for="telefono">Telefono</label>
-    <input type="text" class="form-control" name="telefono" id="telefono" maxlength="8" [(ngModel)] = "proveedor.telefono"   />   
+    <input type="text" class="form-control" name="telefono" id="telefono" maxlength="9" [(ngModel)] = "proveedor.telefono"   />   
 </div>
 
 <div class="col-lg-5">
     <label for="celular">Celular</label>
-    <input type="text" class="form-control" name="celular" id="celular" maxlength="8"  [(ngModel)] = "proveedor.celular"   />  
+    <input type="text" class="form-control" name="celular" id="celular" maxlength="9"  [(ngModel)] = "proveedor.celular"   />  
 </div>
         <div class="row" style="margin-top: 3%">
 
             <div class="col-lg-4">
                 <label for="contacto">Contacto</label>
-                <input type="text" class="form-control" name="contacto" id="contacto" maxlength="8"  [(ngModel)] = "proveedor.contacto"   />  
+                <input type="text" class="form-control" name="contacto" id="contacto"   [(ngModel)] = "proveedor.contacto"   />  
             </div>
 
 
